test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-borrowed-from-oknil-shared.good
init-field-dflt-nonnil-borrowed-from-oknil-shared.chpl:8: error: Cannot initialize lhs of non-nilable type 'borrowed MyClass' from a nilable 'shared MyClass?'
init-field-dflt-nonnil-borrowed-from-oknil-shared.chpl:13: error: done
